src/components/Navigation/navigation.module.css
.root {
  background-color: rgba(0, 0, 0, 0.7);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 3;
  padding: var(--space-2xl) 0;
}

.topContainer {
  float: right;
  display: flex;
  justify-content: space-between;
}
.callBackButton {
  background: none;
  border: none;
  margin: 0;
  padding: 0;
  cursor: pointer;
  font-family: var(--font-sans);
  font-size: var(--text-lg);
  text-transform: uppercase;
  font-weight: var(--semibold);
  color: var(--accent);
}

.hamburgerMenu {
  display: none;
}

.bottomContainer {
  display: flex;
  justify-content: space-between;
  align-items: flex-end;
  width: 100%;
}
.navigation {
  display: flex;
  list-style: none;
  margin: 0 0 0.3rem 0;
  gap: var(--space-xl);
}

.navigationItem {
  display: inline-flex;
  text-transform: uppercase;
  align-items: center;
  flex-direction: row;
  font-size: var(--text-md);
  font-weight: 400;
  margin-left: 2rem;
}

.navigationItem a {
  border-bottom: 1.5px solid transparent;
  color: white;
  text-decoration: none;
  -moz-transition: all 0.2s ease-in;
  -o-transition: all 0.2s ease-in;
  -webkit-transition: all 0.2s ease-in;
  transition: all 0.2s ease-in;
}

.navigationItem a:hover {
  color: var(--accent);
}

.logoLink {
  display: flex;
  font-weight: var(--medium);
  align-items: center;
  flex-direction: row;
  flex-shrink: 0;
  gap: var(--space-md);
}

.logoLinkBack {
  margin-top: -40px;
}

.search {
  cursor: pointer;
}

.searchContainer {
  display: flex;
  align-items: center;
  margin-left: 1rem;
}

.searchContainer input[type=text] {
  font-family: var(--font-sans);
  width: 100%;
  padding: 3px 10px;
  margin: 0 1rem 0 0;
  box-sizing: border-box;
  background-color: #fff;
  border: none;
  font-size: larger;
}

.searchContainer input[type=text]:focus {
  outline-width: 0;
}

@media (max-width: 1024px) {
  .navigationItem {
    font-size: var(--text-sm);
    margin-left: 1rem;
  }
  .callBackButton {
    font-size: var(--text-md);
  }
  .logoLink img {
    width: 170px;
  }
}

@media (max-width: 768px) {
  .navigation {
    display: none;
  }
  .topContainer {
    display: none;
  }
  .hamburgerMenu {
    display: block;
  }
  .bottomContainer {
    align-items: center;
  }
}

@media (max-width: 425px) {
  .logoLink img {
    width: 120px;
  }

  .hamburgerMenu {
    width: 30px;
  }
  .container {
    padding: var(--space-md) var(--size-gutter);
  }
}

